fix(css): remove default caption alignment causes unpleasant look for longer captions; best for projects to customize on their own as fits local practice

--- a/profiles/base10/resources/odd/tp.css
+++ b/profiles/base10/resources/odd/tp.css
@@ -116,7 +116,6 @@ Toggle styles for
 
 .tei-figure .figure-head {
     font-style: italic;
-    text-align: right;
 }
 
 .table-head {
